# RoguelikeGame

./: .flake8  .gitignore  K.in  MANIFEST.in  README.md  base.py  dodo.py  dungeon.py  game.pot  map.in  menu.py  pyproject.toml  setup.cfg  start.sh
GameProject/: __init__.py  __main__.py  base.py  menu.py
GameProject/RoomsInDungeon/: A.in  B.in  D.in  G.in  I.in  J.in  R.in  S.in  map.in
cached_rooms_in_dungeon/: B.in  F.in  G.in  H.in
po/ru/LC_MESSAGES/: game.po
rooms_in_dungeon/: C.in  E.in  H.in  L.in  R.in
ru/LC_MESSAGES/: click.mo  click.po
source/: QuickStart.rst  base.rst  conf.py  index.rst  menu.rst
tests/: __init__.py  test_base.py  test_png_files.py  test_room_files.py
