[metadata]
name = GameProject
version = 0.0.1
url = https://github.com/CatherineFish/RoguelikeGame
author = Ларин Андрей и Чехонина Екатерина
description = Семестровый проект по спецкурсу «Совместная разработка приложений на Python3»
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = GameProject
include_package_data = True
install_requires =
   pygame==2.0.1
   pygame-menu==4.0.7

[options.package_data]
GameProject = */*/game.mo
